# whypainter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  whypainter.cpp  whypainter.h
src/app/frame/: frame_factory.h  frame_factory_interface.h  frame_manager.cpp  frame_manager.h  main_frame.cpp  main_frame.h
src/app/panel/: empty_panel.h
src/app/panel/paint/: paint_canvas.cpp  paint_canvas.h  paint_log.cpp  paint_log.h  paint_sidebar.cpp  paint_sidebar.h  paint_toolbar..cpp  paint_toolbar.h
src/foundation/: CMakeLists.txt
src/foundation/common/: cxx_import.h  singleton.h
src/foundation/gui/: child_panel.cpp  child_panel.h  frame_ui_info.h  panel_ui_info.h  wx_import.h
src/foundation/include/: common_header.h  gui_header.h
